runtime/core/common/src/com/tibco/jxpath/compiler/JXPathParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 JXPath.g 2011-11-06 16:04:32

	package com.tibco.jxpath.compiler;

import java.util.ArrayList;
import java.util.List;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.RuleReturnScope;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

/**
XPath parser, based on XPath v1 grammar defined by W3C.
http://www.w3.org/TR/xpath

*/
public class JXPathParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNCTION_CALL", "FILTER_PREDICATE_EXPR", "QUALIFIED_NAME", "VAR_REF", "SIMPLE_AXIS_STEP", "ABBREVIATED_STEP", "NAMED_AXIS_STEP", "PATH_EXPR", "CONSTANT_EXPR", "AXIS_SPECIFIER", "PREDICATES", "ARGUMENTS", "PATHSEP", "ABRPATH", "AxisName", "CC", "AT", "NodeType", "LPAR", "RPAR", "Literal", "LBRAC", "RBRAC", "DOT", "DOTDOT", "Number", "COMMA", "UNION", "OR", "AND", "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", "LESS_THAN_EQUALS", "GREATER_THAN_EQUALS", "PLUS", "MINUS", "STAR", "DIV", "MOD", "COLON", "VAR_START", "NCName", "Digits", "Whitespace", "NCNameStartChar", "NCNameChar", "'processing-instruction'"
    };
    public static final int NCName=47;
    public static final int STAR=42;
    public static final int AXIS_SPECIFIER=13;
    public static final int MOD=44;
    public static final int PATHSEP=16;
    public static final int LESS_THAN_EQUALS=38;
    public static final int FILTER_PREDICATE_EXPR=5;
    public static final int DOTDOT=28;
    public static final int AND=33;
    public static final int EOF=-1;
    public static final int VAR_START=46;
    public static final int NAMED_AXIS_STEP=10;
    public static final int AT=20;
    public static final int Literal=24;
    public static final int T__52=52;
    public static final int LPAR=22;
    public static final int Number=29;
    public static final int Digits=48;
    public static final int COMMA=30;
    public static final int NOT_EQUAL=35;
    public static final int RBRAC=26;
    public static final int EQUAL=34;
    public static final int AxisName=18;
    public static final int PLUS=40;
    public static final int GREATER_THAN_EQUALS=39;
    public static final int NodeType=21;
    public static final int DOT=27;
    public static final int Whitespace=49;
    public static final int QUALIFIED_NAME=6;
    public static final int NCNameStartChar=50;
    public static final int CONSTANT_EXPR=12;
    public static final int NCNameChar=51;
    public static final int ARGUMENTS=15;
    public static final int GREATER_THAN=37;
    public static final int ABBREVIATED_STEP=9;
    public static final int VAR_REF=7;
    public static final int ABRPATH=17;
    public static final int MINUS=41;
    public static final int SIMPLE_AXIS_STEP=8;
    public static final int LBRAC=25;
    public static final int UNION=31;
    public static final int COLON=45;
    public static final int PREDICATES=14;
    public static final int PATH_EXPR=11;
    public static final int OR=32;
    public static final int LESS_THAN=36;
    public static final int RPAR=23;
    public static final int CC=19;
    public static final int DIV=43;
    public static final int FUNCTION_CALL=4;

    // delegates
    // delegators


        public JXPathParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public JXPathParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return JXPathParser.tokenNames; }
    public String getGrammarFileName() { return "JXPath.g"; }


    public static class main_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "main"
    // JXPath.g:34:1: main : expr ;
    public final JXPathParser.main_return main() throws RecognitionException {
        JXPathParser.main_return retval = new JXPathParser.main_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.expr_return expr1 = null;



        try {
            // JXPath.g:34:7: ( expr )
            // JXPath.g:34:10: expr
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_expr_in_main92);
            expr1=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr1.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "main"

    public static class locationPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "locationPath"
    // JXPath.g:37:1: locationPath : ( relativeLocationPath | absoluteLocationPath );
    public final JXPathParser.locationPath_return locationPath() throws RecognitionException {
        JXPathParser.locationPath_return retval = new JXPathParser.locationPath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.relativeLocationPath_return relativeLocationPath2 = null;

        JXPathParser.absoluteLocationPath_return absoluteLocationPath3 = null;



        try {
            // JXPath.g:38:3: ( relativeLocationPath | absoluteLocationPath )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AxisName||(LA1_0>=AT && LA1_0<=NodeType)||(LA1_0>=DOT && LA1_0<=DOTDOT)||LA1_0==STAR||LA1_0==NCName||LA1_0==52) ) {
                alt1=1;
            }
            else if ( ((LA1_0>=PATHSEP && LA1_0<=ABRPATH)) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // JXPath.g:38:6: relativeLocationPath
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_relativeLocationPath_in_locationPath107);
                    relativeLocationPath2=relativeLocationPath();

                    state._fsp--;

                    adaptor.addChild(root_0, relativeLocationPath2.getTree());

                    }
                    break;
                case 2 :
                    // JXPath.g:39:6: absoluteLocationPath
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_absoluteLocationPath_in_locationPath114);
                    absoluteLocationPath3=absoluteLocationPath();

                    state._fsp--;

                    adaptor.addChild(root_0, absoluteLocationPath3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "locationPath"

    public static class absoluteLocationPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "absoluteLocationPath"
    // JXPath.g:42:1: absoluteLocationPath : ( pathSep relativeLocationPath | abbreviatedAbsoluteLocationPath );
    public final JXPathParser.absoluteLocationPath_return absoluteLocationPath() throws RecognitionException {
        JXPathParser.absoluteLocationPath_return retval = new JXPathParser.absoluteLocationPath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.pathSep_return pathSep4 = null;

        JXPathParser.relativeLocationPath_return relativeLocationPath5 = null;

        JXPathParser.abbreviatedAbsoluteLocationPath_return abbreviatedAbsoluteLocationPath6 = null;



        try {
            // JXPath.g:43:3: ( pathSep relativeLocationPath | abbreviatedAbsoluteLocationPath )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==PATHSEP) ) {
                alt2=1;
            }
            else if ( (LA2_0==ABRPATH) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // JXPath.g:43:6: pathSep relativeLocationPath
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_pathSep_in_absoluteLocationPath128);
                    pathSep4=pathSep();

                    state._fsp--;

                    adaptor.addChild(root_0, pathSep4.getTree());
                    pushFollow(FOLLOW_relativeLocationPath_in_absoluteLocationPath130);
                    relativeLocationPath5=relativeLocationPath();

                    state._fsp--;

                    adaptor.addChild(root_0, relativeLocationPath5.getTree());

                    }
                    break;
                case 2 :
                    // JXPath.g:44:6: abbreviatedAbsoluteLocationPath
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_abbreviatedAbsoluteLocationPath_in_absoluteLocationPath137);
                    abbreviatedAbsoluteLocationPath6=abbreviatedAbsoluteLocationPath();

                    state._fsp--;

                    adaptor.addChild(root_0, abbreviatedAbsoluteLocationPath6.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "absoluteLocationPath"

    public static class abbreviatedAbsoluteLocationPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "abbreviatedAbsoluteLocationPath"
    // JXPath.g:47:1: abbreviatedAbsoluteLocationPath : abrPath relativeLocationPath ;
    public final JXPathParser.abbreviatedAbsoluteLocationPath_return abbreviatedAbsoluteLocationPath() throws RecognitionException {
        JXPathParser.abbreviatedAbsoluteLocationPath_return retval = new JXPathParser.abbreviatedAbsoluteLocationPath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.abrPath_return abrPath7 = null;

        JXPathParser.relativeLocationPath_return relativeLocationPath8 = null;



        try {
            // JXPath.g:48:3: ( abrPath relativeLocationPath )
            // JXPath.g:48:5: abrPath relativeLocationPath
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_abrPath_in_abbreviatedAbsoluteLocationPath150);
            abrPath7=abrPath();

            state._fsp--;

            adaptor.addChild(root_0, abrPath7.getTree());
            pushFollow(FOLLOW_relativeLocationPath_in_abbreviatedAbsoluteLocationPath152);
            relativeLocationPath8=relativeLocationPath();

            state._fsp--;

            adaptor.addChild(root_0, relativeLocationPath8.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "abbreviatedAbsoluteLocationPath"

    public static class relativeLocationPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "relativeLocationPath"
    // JXPath.g:51:1: relativeLocationPath : step ( simpleAxisStep step )* ;
    public final JXPathParser.relativeLocationPath_return relativeLocationPath() throws RecognitionException {
        JXPathParser.relativeLocationPath_return retval = new JXPathParser.relativeLocationPath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.step_return step9 = null;

        JXPathParser.simpleAxisStep_return simpleAxisStep10 = null;

        JXPathParser.step_return step11 = null;



        try {
            // JXPath.g:52:3: ( step ( simpleAxisStep step )* )
            // JXPath.g:52:6: step ( simpleAxisStep step )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_step_in_relativeLocationPath168);
            step9=step();

            state._fsp--;

            adaptor.addChild(root_0, step9.getTree());
            // JXPath.g:52:11: ( simpleAxisStep step )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=PATHSEP && LA3_0<=ABRPATH)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // JXPath.g:52:12: simpleAxisStep step
            	    {
            	    pushFollow(FOLLOW_simpleAxisStep_in_relativeLocationPath171);
            	    simpleAxisStep10=simpleAxisStep();

            	    state._fsp--;

            	    adaptor.addChild(root_0, simpleAxisStep10.getTree());
            	    pushFollow(FOLLOW_step_in_relativeLocationPath173);
            	    step11=step();

            	    state._fsp--;

            	    adaptor.addChild(root_0, step11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "relativeLocationPath"

    public static class simpleAxisStep_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleAxisStep"
    // JXPath.g:55:1: simpleAxisStep : ( pathSep | abrPath ) ;
    public final JXPathParser.simpleAxisStep_return simpleAxisStep() throws RecognitionException {
        JXPathParser.simpleAxisStep_return retval = new JXPathParser.simpleAxisStep_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.pathSep_return pathSep12 = null;

        JXPathParser.abrPath_return abrPath13 = null;



        try {
            // JXPath.g:56:5: ( ( pathSep | abrPath ) )
            // JXPath.g:56:7: ( pathSep | abrPath )
            {
            root_0 = (Object)adaptor.nil();

            // JXPath.g:56:7: ( pathSep | abrPath )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==PATHSEP) ) {
                alt4=1;
            }
            else if ( (LA4_0==ABRPATH) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // JXPath.g:56:9: pathSep
                    {
                    pushFollow(FOLLOW_pathSep_in_simpleAxisStep192);
                    pathSep12=pathSep();

                    state._fsp--;

                    adaptor.addChild(root_0, pathSep12.getTree());

                    }
                    break;
                case 2 :
                    // JXPath.g:57:9: abrPath
                    {
                    pushFollow(FOLLOW_abrPath_in_simpleAxisStep202);
                    abrPath13=abrPath();

                    state._fsp--;

                    adaptor.addChild(root_0, abrPath13.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "simpleAxisStep"

    public static class pathSep_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pathSep"
    // JXPath.g:61:1: pathSep : PATHSEP -> ^( SIMPLE_AXIS_STEP PATHSEP ) ;
    public final JXPathParser.pathSep_return pathSep() throws RecognitionException {
        JXPathParser.pathSep_return retval = new JXPathParser.pathSep_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PATHSEP14=null;

        Object PATHSEP14_tree=null;
        RewriteRuleTokenStream stream_PATHSEP=new RewriteRuleTokenStream(adaptor,"token PATHSEP");

        try {
            // JXPath.g:62:2: ( PATHSEP -> ^( SIMPLE_AXIS_STEP PATHSEP ) )
            // JXPath.g:62:4: PATHSEP
            {
            PATHSEP14=(Token)match(input,PATHSEP,FOLLOW_PATHSEP_in_pathSep228);  
            stream_PATHSEP.add(PATHSEP14);



            // AST REWRITE
            // elements: PATHSEP
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:15: -> ^( SIMPLE_AXIS_STEP PATHSEP )
            {
                // JXPath.g:62:18: ^( SIMPLE_AXIS_STEP PATHSEP )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SIMPLE_AXIS_STEP, "SIMPLE_AXIS_STEP"), root_1);

                adaptor.addChild(root_1, stream_PATHSEP.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pathSep"

    public static class abrPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "abrPath"
    // JXPath.g:65:1: abrPath : ABRPATH -> ^( SIMPLE_AXIS_STEP ABRPATH ) ;
    public final JXPathParser.abrPath_return abrPath() throws RecognitionException {
        JXPathParser.abrPath_return retval = new JXPathParser.abrPath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ABRPATH15=null;

        Object ABRPATH15_tree=null;
        RewriteRuleTokenStream stream_ABRPATH=new RewriteRuleTokenStream(adaptor,"token ABRPATH");

        try {
            // JXPath.g:66:2: ( ABRPATH -> ^( SIMPLE_AXIS_STEP ABRPATH ) )
            // JXPath.g:66:4: ABRPATH
            {
            ABRPATH15=(Token)match(input,ABRPATH,FOLLOW_ABRPATH_in_abrPath251);  
            stream_ABRPATH.add(ABRPATH15);



            // AST REWRITE
            // elements: ABRPATH
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 66:12: -> ^( SIMPLE_AXIS_STEP ABRPATH )
            {
                // JXPath.g:66:15: ^( SIMPLE_AXIS_STEP ABRPATH )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SIMPLE_AXIS_STEP, "SIMPLE_AXIS_STEP"), root_1);

                adaptor.addChild(root_1, stream_ABRPATH.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "abrPath"

    public static class step_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "step"
    // JXPath.g:69:1: step : ( namedAxisStep | abbreviatedStep );
    public final JXPathParser.step_return step() throws RecognitionException {
        JXPathParser.step_return retval = new JXPathParser.step_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.namedAxisStep_return namedAxisStep16 = null;

        JXPathParser.abbreviatedStep_return abbreviatedStep17 = null;



        try {
            // JXPath.g:69:7: ( namedAxisStep | abbreviatedStep )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==AxisName||(LA5_0>=AT && LA5_0<=NodeType)||LA5_0==STAR||LA5_0==NCName||LA5_0==52) ) {
                alt5=1;
            }
            else if ( ((LA5_0>=DOT && LA5_0<=DOTDOT)) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // JXPath.g:69:10: namedAxisStep
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_namedAxisStep_in_step272);
                    namedAxisStep16=namedAxisStep();

                    state._fsp--;

                    adaptor.addChild(root_0, namedAxisStep16.getTree());

                    }
                    break;
                case 2 :
                    // JXPath.g:70:6: abbreviatedStep
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_abbreviatedStep_in_step279);
                    abbreviatedStep17=abbreviatedStep();

                    state._fsp--;

                    adaptor.addChild(root_0, abbreviatedStep17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "step"

    public static class namedAxisStep_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namedAxisStep"
    // JXPath.g:73:1: namedAxisStep : ( axisSpecifier )? nodeTest ( predicates )? -> ^( NAMED_AXIS_STEP ( axisSpecifier )? nodeTest ( ^( PREDICATES predicates ) )? ) ;
    public final JXPathParser.namedAxisStep_return namedAxisStep() throws RecognitionException {
        JXPathParser.namedAxisStep_return retval = new JXPathParser.namedAxisStep_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        JXPathParser.axisSpecifier_return axisSpecifier18 = null;

        JXPathParser.nodeTest_return nodeTest19 = null;

        JXPathParser.predicates_return predicates20 = null;


        RewriteRuleSubtreeStream stream_predicates=new RewriteRuleSubtreeStream(adaptor,"rule predicates");
        RewriteRuleSubtreeStream stream_nodeTest=new RewriteRuleSubtreeStream(adaptor,"rule nodeTest");
        RewriteRuleSubtreeStream stream_axisSpecifier=new RewriteRuleSubtreeStream(adaptor,"rule axisSpecifier");
        try {
            // JXPath.g:74:5: ( ( axisSpecifier )? nodeTest ( predicates )? -> ^( NAMED_AXIS_STEP ( axisSpecifier )? nodeTest ( ^( PREDICATES predicates ) )? ) )
            // JXPath.g:74:7: ( axisSpecifier )? nodeTest ( predicates )?
            {
            // JXPath.g:74:7: ( axisSpecifier )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==AxisName) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==CC) ) {
                    alt6=1;
                }
            }
            else if ( (LA6_0==AT) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // JXPath.g:74:7: axisSpecifier
                    {
                    pushFollow(FOLLOW_axisSpecifier_in_namedAxisStep294);
                    axisSpecifier18=axisSpecifier();

                    state._fsp--;

                    stream_axisSpecifier.add(axisSpecifier18.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_nodeTest_in_namedAxisStep297);
            nodeTest19=nodeTest();

            state._fsp--;

            stream_nodeTest.add(nodeTest19.getTree());
            // JXPath.g:74:31: ( predicates )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==LBRAC) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // JXPath.g:74:31: predicates
                    {
                    pushFollow(FOLLOW_predicates_in_namedAxisStep299);
                    predicates20=predicates();

                    state._fsp--;

